# schism

./: .editorconfig  .gitignore  Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  hir.rs  lib.rs  trivia.rs
crates/die/: Cargo.toml
crates/die/src/: lib.rs
crates/die/src/snapshots/: die__test__kh-2.snap  die__test__kh-3.snap  die__test__kh.snap  die__test__test-2.snap  die__test__test-3.snap.new  die__test__test.snap  die__test__tester.snap  die__test__tester.snap.new
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: builtins.rs  eval.rs  lib.rs  test.rs
crates/interpreter/src/snapshots/: interpreter__test__test-10.snap  interpreter__test__test-11.snap  interpreter__test__test-12.snap  interpreter__test__test-13.snap  interpreter__test__test-14.snap  interpreter__test__test-15.snap  interpreter__test__test-16.snap  interpreter__test__test-17.snap  interpreter__test__test-18.snap  interpreter__test__test-19.snap  interpreter__test__test-2.snap  interpreter__test__test-20.snap  interpreter__test__test-21.snap  interpreter__test__test-22.snap  interpreter__test__test-23.snap  interpreter__test__test-24.snap  interpreter__test__test-3.snap  interpreter__test__test-4.snap  interpreter__test__test-5.snap  interpreter__test__test-6.snap  interpreter__test__test-7.snap  interpreter__test__test-8.snap  interpreter__test__test-9.snap  interpreter__test__test.snap
crates/native-derive/: Cargo.toml
crates/native-derive/src/: lib.rs  native.rs
crates/native-derive/src/snapshots/: native_derive__native__test__test.snap
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  pratt.rs  scm.pest
examples/: apex.scm  blades.scm  simple.scm
