[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
edition = "2021"
license = "MIT"
authors = ["josh.r.bassin@gmail.com"]

[profile.dev]
debug = 0

[profile.dev.package]

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
ast = { path = "crates/ast" }
parser = { path = "crates/parser" }

smol_str = "0.2.0"
