[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
edition = "2021"
license = "MIT"
authors = ["josh.r.bassin@gmail.com"]

[profile.dev]
debug = 0

[profile.dev.package]

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
ast = { path = "crates/ast" }
errors = { path = "crates/errors" }
parser = { path = "crates/parser" }

ariadne = { version = "0.3.0", features = ["auto-color"] }
smol_str = "0.2.0"
