[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
edition = "2021"
license = "MIT"
authors = ["josh.r.bassin@gmail.com"]

[profile.dev]
debug = 0

[profile.dev.package]

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
ast = { path = "crates/ast" }
errors = { path = "crates/errors" }
interpreter = { path = "crates/interpreter" }
parser = { path = "crates/parser" }
native_derive = { path = "crates/native-derive" }

ariadne = { version = "0.3.0", features = ["auto-color"] }
fixed = "1.24.0"
rpds = "1.0.1"
smol_str = "0.2.0"
