[package]
name = "ast"
version = "0.0.0"
description = "asts"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# workspace deps
errors.workspace = true

# local deps
archery = "1.0.0"

# global deps
fixed.workspace = true
smol_str.workspace = true
rpds.workspace = true
rug.workspace = true
