[package]
name = "die"
version = "0.0.0"
description = "dices"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
# workspace deps
ast.workspace = true

# local deps
cached = "0.46.1"
lazy_static = "1.4.0"
num = "0.4.1"
fxhash = "0.2.1"
rayon = "1.8.0"

# global deps
archery.workspace = true
rpds.workspace = true
smol_str.workspace = true
rug.workspace = true
