[package]
name = "die"
version = "0.0.0"
description = "dices"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# workspace deps
ast.workspace = true

# local deps
cached = "0.46.1"
lazy_static = "1.4.0"
num = "0.4.1"
fxhash = "0.2.1"
rayon = "1.8.0"

# global deps
archery.workspace = true
rpds.workspace = true
smol_str.workspace = true
rug.workspace = true
multimap = "0.9.1"

[dev-dependencies]
indoc = "2.0.4"
insta = "1.34.0"
