[package]
name = "errors"
version = "0.0.0"
description = "errorses"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# workspace deps

# local deps
thiserror = "1.0.49"

# global deps
ariadne.workspace = true

[dev-dependencies]
