[package]
name = "interpreter"
version = "0.0.0"
description = "interprets"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# workspace deps
ast.workspace = true
errors.workspace = true
fixed.workspace = true
parser.workspace = true
native_derive.workspace = true

# local deps
rayon = "1.8.0"
archery = "1.0.0"

# global deps
smol_str.workspace = true
rpds.workspace = true
rug.workspace = true

[dev-dependencies]
indoc = "2.0.4"
insta = "1.34.0"
